Automate protection for CVE-2024-56337
If there is a potentially vulnerable web application (Java < 21,
WebResourceSet configured for read/write, case-insensitive file system)
ensure that the JVM behaves as if sun.io.useCanonCaches is false. If
that cannot be ensured, prevent the potentially vulnerable web
applications from starting.

--- a/java/org/apache/catalina/webresources/LocalStrings.properties
+++ b/java/org/apache/catalina/webresources/LocalStrings.properties
@@ -36,6 +36,8 @@ cachedResource.invalidURL=Unable to create an instance of CachedResourceURLStrea
 
 classpathUrlStreamHandler.notFound=Unable to load the resource [{0}] using the thread context class loader or the current class''s class loader
 
+dirResourceSet.canonCaches.disabled=Disabled the global canonical file name cache to protect against CVE-2024-56337 when starting the WebResourceSet at [{0}] which is part of the web application [{1}]
+dirResourceSet.canonCaches.enabled=Unable to disable the global canonical file name cache or confirm that it is disabled when starting the WebResourceSet at [{0}] which is part of the web application [{1}]. The WebResourceSet may be exposed to CVE-2024-56337.
 dirResourceSet.isCaseSensitive.fail=Error trying to determine if file system at [{0}] is case sensitive so assuming it is not case sensitive
 dirResourceSet.manifestFail=Failed to read manifest from [{0}]
 dirResourceSet.notDirectory=The directory specified by base and internal path [{0}]{1}[{2}] does not exist.
