--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -37,3 +37,6 @@ jreCompat.noApplicationProtocol=Java Runtime does not support SSLEngine.getAppli
 jreCompat.noApplicationProtocols=Java Runtime does not support SSLParameters.setApplicationProtocols(). You must use Java 9 to use this feature.
 jreCompat.noUnixDomainSocket=Java Runtime does not support Unix domain sockets. You must use Java 16 or later to use this feature.
 jreCompat.noVirtualThreads=Java Runtime does not support virtual threads. You must use Java 21 or later to use this feature.
+jreCompat.useCanonCaches.failed=Failed to set the java.io.FileSystem.useCanonCaches static field
+jreCompat.useCanonCaches.init=Unable to create a reference to the java.io.FileSystem.useCanonCaches static field
+jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available. Enable debug logging for more information.
