Automate protection for CVE-2024-56337
If there is a potentially vulnerable web application (Java < 21,
WebResourceSet configured for read/write, case-insensitive file system)
ensure that the JVM behaves as if sun.io.useCanonCaches is false. If
that cannot be ensured, prevent the potentially vulnerable web
applications from starting.

--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -20,3 +20,7 @@ jre18Compat.javaPre18=Method not found so assuming code is running on a pre-Java
 
 jre22Compat.javaPre22=Class not found so assuming code is running on a pre-Java 22 JVM
 jre22Compat.unexpected=Failed to create references to Java 22 classes and methods
+
+jreCompat.useCanonCaches.failed=Failed to set the java.io.FileSystem.useCanonCaches static field
+jreCompat.useCanonCaches.init=Unable to create a reference to the java.io.FileSystem.useCanonCaches static field
+jreCompat.useCanonCaches.none=No reference to the java.io.FileSystem.useCanonCaches static field available. Enable debug logging for more information.
